# ticket-assignment

./: README.md  main.py  messages.txt  process_message()  prompts.md  pyproject.toml  summarize.py  test_validator.py  tickets.json  validator.py
git/: pyproject.toml
